@@ -1,3 +1,5 @@
+    - fixed issue with php executing in literal blocks (Monte)
+
 Version 1.3.0
 -------------
     - moved license from GPL to LGPL (Monte)
